fixed collapsed footer margin

--- a/style.scss
+++ b/style.scss
@@ -257,7 +257,7 @@ nav {
 // .main
 //
 
-#main { padding-bottom: 90px; } /* height of footer */
+#main { padding-bottom: 180px; } /* height of footer x2 for whitespace */
 
 .posts > .post {
     padding-bottom: 2em;
@@ -290,7 +290,6 @@ nav {
 }
 
 .wrapper-footer {
-    margin-top: 50px;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
     background-color: $lightGray;
